tests/transpiler/x/scala/list_set_ops.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/list_set_ops.scala:5: error: value except is not a member of List[Int]
        println((List(1, 2, 3) except List(2)))
                               ^
one error found
