tests/transpiler/x/scala/list_set_ops.scala
// Generated by Mochi v0.10.31 on 2025-07-20 09:06:48 GMT+7
object Main {
  def main(args: Array[String]): Unit = {
    println((List(1, 2) union List(2, 3)))
    println((List(1, 2, 3) except List(2)))
    println((List(1, 2, 3) intersect List(2, 4)))
    println((List(1, 2) union List(2, 3)).length)
  }
}
